--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
+    <div id="loading">
+        <img id="loading-image" src="loading.gif" alt="Loading..." />
+    </div>
 
     <div class="container">
         <h1>Hello There!</h1>
