--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,11 @@
         <p>To get started, edit <code>src/index.js</code>.</p>
     </div>
 
+    <div id="movieList">
+
+    </div>
+
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script src="./main.js"></script>
 </body>
 </html>
