--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,29 @@
         <img id="loading-image" src="loading.gif" alt="Loading..." />
     </div>
 
-    <div class="container">
-        <h1>Hello There!</h1>
-        <p>To get started, edit <code>src/index.js</code>.</p>
+<!--    <div class="container">-->
+<!--        <h1>Hello There!</h1>-->
+<!--        <p>To get started, edit <code>src/index.js</code>.</p>-->
+<!--    </div>-->
+<!--Input movie form-->
+    <div>
+        <form>
+            <div class="form-group">
+                <label for="movieName">Movie Name: </label>
+                <input id="movieName" type="text" class="form-control" placeholder="Enter movie name">
+            </div>
+            <div class="form-group">
+                <label for="ratingID">Rating</label>
+                <select class="form-control" id="ratingID">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                </select>
+            </div>
+            <button type="submit" id="btn1" class="btn btn-primary">Submit</button>
+        </form>
     </div>
 
     <div id="movieList">
