--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,38 @@
 <!--Input movie form-->
     <div>
         <form>
+            <h2>Add New Movie</h2>
             <div class="form-group">
                 <label for="movieName">Movie Name: </label>
                 <input id="movieName" type="text" class="form-control" placeholder="Enter movie name">
             </div>
             <div class="form-group">
                 <label for="ratingID">Rating</label>
+                <select class="form-control" id="ratingID">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                </select>
+            </div>
+            <button type="submit" id="btn1" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+
+    <div>
+        <form>
+            <h2>Edit Movie</h2>
+            <div class="form-group">
+                <label for="editMovieName">Movie Name: </label>
+                <input id="editMovieName" type="text" class="form-control" placeholder="Enter movie name">
+            </div>
+            <div class="form-group">
+                <label for="changeMovieName">New Movie Name: </label>
+                <input id="changeMovieName" type="text" class="form-control" placeholder="Enter movie name">
+            </div>
+            <div class="form-group">
+                <label for="ratingID">New Rating</label>
                 <select class="form-control" id="ratingID">
                     <option>1</option>
                     <option>2</option>
