--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
                 <input id="movieName" type="text" class="form-control" placeholder="Enter movie name">
             </div>
             <div class="form-group">
-                <label for="ratingID">Rating</label>
-                <select class="form-control" id="ratingID">
+                <label for="ratingID1">Rating</label>
+                <select class="form-control" id="ratingID1">
                     <option>1</option>
                     <option>2</option>
                     <option>3</option>
@@ -48,8 +48,8 @@
                 <input id="changeMovieName" type="text" class="form-control" placeholder="Enter movie name">
             </div>
             <div class="form-group">
-                <label for="ratingID">New Rating</label>
-                <select class="form-control" id="ratingID">
+                <label for="ratingID2">New Rating</label>
+                <select class="form-control" id="ratingID2">
                     <option>1</option>
                     <option>2</option>
                     <option>3</option>
@@ -57,7 +57,7 @@
                     <option>5</option>
                 </select>
             </div>
-            <button type="submit" id="btn1" class="btn btn-primary">Submit</button>
+            <button type="submit" id="btn2" class="btn btn-primary">Submit</button>
         </form>
     </div>
 
