--- a/public/index.html
+++ b/public/index.html
@@ -41,10 +41,6 @@
         <form>
             <h2>Edit Movie</h2>
             <div class="form-group">
-                <label for="editMovieName">Movie Name: </label>
-                <input id="editMovieName" type="text" class="form-control" placeholder="Enter movie name">
-            </div>
-            <div class="form-group">
                 <label for="changeMovieName">New Movie Name: </label>
                 <input id="changeMovieName" type="text" class="form-control" placeholder="Enter movie name">
             </div>
@@ -58,6 +54,7 @@
                     <option>5</option>
                 </select>
             </div>
+            <input type="hidden" id="editID">
             <button type="submit" id="btn2" class="btn btn-primary">Submit</button>
         </form>
     </div>
