--- a/public/index.html
+++ b/public/index.html
@@ -16,50 +16,54 @@
 <!--        <p>To get started, edit <code>src/index.js</code>.</p>-->
 <!--    </div>-->
 <!--Input movie form-->
-    <div>
-        <form>
-            <h2>Add New Movie</h2>
-            <div class="form-group">
-                <label for="movieName">Movie Name: </label>
-                <input id="movieName" type="text" class="form-control" placeholder="Enter movie name">
-            </div>
-            <div class="form-group">
-                <label for="ratingID1">Rating</label>
-                <select class="form-control" id="ratingID1">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                </select>
-            </div>
-            <button type="submit" id="btn1" class="btn btn-primary">Submit</button>
-        </form>
+    <div id="formContainer" class="row mt-2 mx-auto">
+
+
+        <div class="col-6">
+            <form>
+                <h2>Add New Movie</h2>
+                <div class="form-group">
+                    <label for="movieName">Movie Name: </label>
+                    <input id="movieName" type="text" class="form-control" placeholder="Enter movie name">
+                </div>
+                <div class="form-group">
+                    <label for="ratingID1">Rating</label>
+                    <select class="form-control" id="ratingID1">
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                    </select>
+                </div>
+                <button type="submit" id="btn1" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+
+        <div class="col-6">
+            <form>
+                <h2>Edit Movie</h2>
+                <div class="form-group">
+                    <label for="changeMovieName">New Movie Name: </label>
+                    <input id="changeMovieName" type="text" class="form-control" placeholder="Enter movie name">
+                </div>
+                <div class="form-group">
+                    <label for="ratingID2">New Rating</label>
+                    <select class="form-control" id="ratingID2">
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                    </select>
+                </div>
+                <input type="hidden" id="editID">
+                <button type="submit" id="btn2" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
     </div>
 
-    <div>
-        <form>
-            <h2>Edit Movie</h2>
-            <div class="form-group">
-                <label for="changeMovieName">New Movie Name: </label>
-                <input id="changeMovieName" type="text" class="form-control" placeholder="Enter movie name">
-            </div>
-            <div class="form-group">
-                <label for="ratingID2">New Rating</label>
-                <select class="form-control" id="ratingID2">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                </select>
-            </div>
-            <input type="hidden" id="editID">
-            <button type="submit" id="btn2" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
-
-    <div id="movieList" class="row">
+    <div id="movieList" class="row mt-5 mx-auto">
 
     </div>
 
