--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8" />
     <title>My Application</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bower_components/bootstrap-horizon/bootstrap-horizon.css">
     <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
+    <div class="jumbotron jumbotron-fluid">
+<!--        <div class="container">-->
+            <img id="codeupflix" class="m-auto" src="Codeupflex.png" alt="codeupflex">
+<!--        </div>-->
+    </div>
+
     <div id="loading">
         <img id="loading-image" src="loading.gif" alt="Loading..." />
     </div>
-
-<!--    <div class="container">-->
-<!--        <h1>Hello There!</h1>-->
-<!--        <p>To get started, edit <code>src/index.js</code>.</p>-->
-<!--    </div>-->
-<!--Input movie form-->
-    <div id="formContainer" class="row mt-2 mx-auto">
+    
+    <div id="formContainer" class="row my-2 mx-auto">
 
 
         <div class="col-6">
@@ -63,15 +66,17 @@
         </div>
     </div>
 
-    <div id="movieList" class="row mt-5 mx-auto">
 
-    </div>
+        <div class="container my-5 testimonial-group">
+            <div class="row mx-0" id="movieList">
+
+            </div>
+
+        </div>
+
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js" integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J" crossorigin="anonymous"></script>
     <script src="./main.js"></script>
-    <script src="./src/index.js"></script>
-    <script src="keys.js"></script>
 </body>
 </html>
