changed class name

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
     </div>
 
 
-        <div class="container my-5 testimonial-group">
+        <div class="container my-5 movie-group">
             <div class="row mx-0" id="movieList">
 
             </div>
